--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,9 @@
 @import 'components/navBar';
 
 @import 'pages/home';
-@import 'pages/support';
+@import 'pages/messages';
 @import 'pages/products';
 @import 'pages/profile';
+@import 'pages/reports';
+@import 'pages/support';
 @import 'pages/team';
