--- a/scss/basic/_base.scss
+++ b/scss/basic/_base.scss
@@ -8,7 +8,8 @@
 }
 html{
     width: 100%;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 html,body{
     font-size: 62.5%;
@@ -28,5 +29,4 @@ html,body{
 
 .home , .reports, .products, .team, .messages, .support, .profile{
     display: flex;
-    height: 90vh;
 }
